Updated APi docs
